--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ code {
   width: 100%;
   background-color: rgb(120, 24, 112);
   padding: 10px;
-  /* margin-top: 2rem; */
+  margin-top: 20rem;
   color: white;
 }
 
